syntax = "proto3";



enum BatteryState {
	Unknown=0;
	Charging=1;
	Discharching=2;
	Full=3;
}


message StatusMessage {
	string HeadsetID =1;
	double BatteryLevel=2;
	BatteryState BatState=3;
}  

